--- a/addrow.html
+++ b/addrow.html
@@ -27,9 +27,10 @@ table, td {
   <tr>
     <td><input type="text" /></td>
     <td><input type="text" /></td>
-  </tr>
+  </tr> 
 </tbody>
 </table>
 <script src="/home/bridgeit/Html_Javascript/addRowColum.js"></script>
   </body>
   </html>
+<!--  hi sharad-->
